--- a/manager/package.json
+++ b/manager/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "firebase": "^3.1.0",
+    "lodash": "^4.17.11",
     "react": "16.8.3",
     "react-native": "0.59.3",
     "react-redux": "^6.0.1",
