--- a/manager/package.json
+++ b/manager/package.json
@@ -11,6 +11,7 @@
     "lodash": "^4.17.11",
     "react": "16.8.3",
     "react-native": "0.59.3",
+    "react-native-communications": "^2.2.1",
     "react-redux": "^6.0.1",
     "redux": "^4.0.1",
     "redux-thunk": "^2.3.0"
